Fixed Overlapped Clock Feature

--- a/frontend/src/components/HeaderFeatures.css
+++ b/frontend/src/components/HeaderFeatures.css
@@ -39,22 +39,7 @@
   color:#FFD100;
 }
 
-.Clock {
-  position: absolute;
-  top: 120%;
-  right: 10px;
-  transform: translate(0, -100%);
-  border: 4px solid #2774AE;
-  border-radius: 20px;
-  width: 110px;
-  left: 50px;
-  margin: 2px;
-  padding: 15px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: large;
-  font-display: white;
-  background-color: #FFD100;
-}
+
 
 hr {
   color: #FFD100;
